# RGBProject

./: CMakeLists.txt  extra task.txt  main.cpp
.github/workflows/: cmake.yml  windows.yml
TestTask/libs/RGBProject/: CMakeLists.txt
TestTask/libs/RGBProject/include/: simplergb.h
TestTask/libs/RGBProject/source/: simplergb.cpp
TestTask/libs/RGBProject/test/: example_test.cpp
TestTask/libs/exampleProject/: CMakeLists.txt
TestTask/libs/exampleProject/include/: exampleclass.h
TestTask/libs/exampleProject/source/: exampleclass.cpp
TestTask/libs/exampleProject/test/: example_test.cpp
TestTask/libs/printer/: CMakeLists.txt  unittest.cmake
TestTask/libs/printer/source/: printer.cpp
TestTask/libs/printer/test/: printer_test.cpp
rgb/: CMakeLists.txt  main.qml  rgbsimplebackend.cpp  rgbsimplebackend.h
